@@ -8,6 +8,7 @@ version 0.9.18:
 	* More fixes for the change on the AOL sign-on process. 
 	* Fixed bug where GAIM sometimes doesn't find a font to use.
 	* Per-conversation font and color dialogs (thanks fflewddur)
+	* Chat in oscar works
 
 version 0.9.17 (05/31/2000):
 	* Automagic feature to check for new versions has been removed
